--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -29,6 +29,13 @@
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 6px;
+
+  transition: background-color 0.2s ease-out;
+}
+
+.todoListMain .theList li:hover {
+  background-color: lightpink;
+  cursor: pointer;
 }
 
 ul.theList {
